--- a/src/app/scss/index.scss
+++ b/src/app/scss/index.scss
@@ -1,25 +1,25 @@
-@import '_plugins.scss';
+@import 'plugins';
 @import 'default/variable';
 @import 'default/typography';
 @import 'common/spacing';
 @import 'common/general';
-@import 'common/slider';
-@import 'common/video-modal';
-@import 'common/sidebar';
 @import 'common/header';
 @import 'common/footer';
-@import 'components/card';
-@import 'components/cta';
-@import 'components/customcursor';
-@import 'components/funfact';
+@import 'common/slider';
+@import 'common/sidebar';
+@import 'common/video-modal';
+@import 'components/team';
 @import 'components/hero';
-@import 'components/iconbox';
-@import 'components/logolist';
-@import 'components/movingtext';
 @import 'components/portfolio';
 @import 'components/post';
-@import 'components/pricing';
-@import 'components/servicelist';
-@import 'components/team';
+@import 'components/logolist';
 @import 'components/testimonial';
+@import 'components/card';
+@import 'components/iconbox';
+@import 'components/funfact';
+@import 'components/servicelist';
 @import 'components/timeline';
+@import 'components/movingtext';
+@import 'components/pricing';
+@import 'components/customcursor';
+@import 'components/cta';
