--- a/src/app/scss/default/_typography.scss
+++ b/src/app/scss/default/_typography.scss
@@ -6,7 +6,7 @@ html {
   font-weight: 400;
   line-height: 1.6em;
   overflow-x: hidden;
-  background-color: $gray;
+  background-color: #fff;
 }
 
 h1,
