--- a/src/app/scss/components/_funfact.scss
+++ b/src/app/scss/components/_funfact.scss
@@ -1,3 +1,5 @@
+@use '../default/variable' as *;
+
 .cs-funfact_wrap {
   display: flex;
   background: linear-gradient(267.18deg, #161616 0%, #080808 100%);
