--- a/src/app/scss/components/_pricing.scss
+++ b/src/app/scss/components/_pricing.scss
@@ -1,3 +1,5 @@
+@use '../default/variable' as *;
+
 .cs-pricing_table.cs-style1 {
   position: relative;
   background: linear-gradient(267.18deg, #161616 0%, #080808 100%);
