--- a/src/app/scss/index.scss
+++ b/src/app/scss/index.scss
@@ -1,25 +1,27 @@
-@import 'plugins';
-@import 'default/variable';
-@import 'default/typography';
-@import 'common/spacing';
-@import 'common/general';
-@import 'common/header';
-@import 'common/footer';
-@import 'common/slider';
-@import 'common/sidebar';
-@import 'common/video-modal';
-@import 'components/team';
-@import 'components/hero';
-@import 'components/portfolio';
-@import 'components/post';
-@import 'components/logolist';
-@import 'components/testimonial';
-@import 'components/card';
-@import 'components/iconbox';
-@import 'components/funfact';
-@import 'components/servicelist';
-@import 'components/timeline';
-@import 'components/movingtext';
-@import 'components/pricing';
-@import 'components/customcursor';
-@import 'components/cta';
+@use 'plugins';
+@use 'default/variable';
+@use 'default/typography';
+@use 'common/spacing';
+@use 'common/general';
+@use 'common/header';
+@use 'common/footer';
+@use 'common/slider';
+@use 'common/sidebar';
+@use 'common/video-modal';
+@use 'components/team';
+@use 'components/hero';
+@use 'components/portfolio';
+@use 'components/post';
+@use 'components/logolist';
+@use 'components/testimonial';
+@use 'components/card';
+@use 'components/iconbox';
+@use 'components/funfact';
+@use 'components/servicelist';
+@use 'components/timeline';
+@use 'components/movingtext';
+@use 'components/pricing';
+@use 'components/customcursor';
+@use 'components/cta';
+@use 'components/button';
+@use 'components/gallery';
