--- a/src/app/scss/components/_card.scss
+++ b/src/app/scss/components/_card.scss
@@ -1,7 +1,10 @@
+@use '../default/variable' as *;
+
 .cs-card.cs-style1 {
   position: relative;
   border-radius: 15px;
   display: block;
+  background: linear-gradient(267.18deg, #161616 0%, #080808 100%);
   
   &:hover {
     filter: drop-shadow(0px 0px 30px rgba(255, 74, 23, 0.5));
@@ -17,8 +20,10 @@
     width: 100%;
     height: 100%;
     border-radius: inherit;
-    background: #000000;
-    opacity: 0.5;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 100%), url('https://freestocktextures.com/texture/dark-grunge-concrete/551/');
+    background-size: cover;
+    background-blend-mode: overlay;
+    opacity: 1;
   }
   .cs-card_info {
     position: absolute;
