--- a/src/app/scss/default/_typography.scss
+++ b/src/app/scss/default/_typography.scss
@@ -1,12 +1,26 @@
+@use 'variable' as *;
+
 body,
 html {
   color: $secondary;
   font-family: var(--secondary-font), sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
-  line-height: 1.6em;
+  line-height: 1.7em;
   overflow-x: hidden;
-  background-color: #fff;
+  background-color: #000;
+  position: relative;
+
+  &::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(10, 10, 10, 0.7), rgba(18, 18, 18, 0.7));
+    z-index: -1;
+  }
 }
 
 h1,
@@ -20,16 +34,16 @@ h6 {
   padding: 0;
   margin: 0 0 20px 0;
   font-weight: 600;
-  line-height: 1.3em;
+  line-height: 1.4em;
   font-family: var(--primary-font), sans-serif;
 }
 
-.cs-primary_font {
-  font-family: var(--primary-font), sans-serif;
-}
-
-.cs-secondary_font {
-  font-family: var(--secondary-font), sans-serif;
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: $accent;
 }
 
 h1 {
@@ -56,8 +70,13 @@ h6 {
   font-size: 16px;
 }
 
+h1,
+.cs-fs-80 {
+  font-size: 80px;
+}
+
 p {
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 ul {
@@ -158,7 +177,7 @@ kbd {
 @media screen and (max-width: 991px) {
   body,
   html {
-    font-size: 16px;
+    font-size: 17px;
     line-height: 1.6em;
   }
   h2 {
@@ -169,4 +188,12 @@ kbd {
 input,
 textarea {
   color: $primary;
+}
+
+.cs-primary_font {
+  font-family: var(--primary-font), sans-serif;
+}
+
+.cs-secondary_font {
+  font-family: var(--secondary-font), sans-serif;
 }
