--- a/src/app/scss/common/_footer.scss
+++ b/src/app/scss/common/_footer.scss
@@ -87,15 +87,17 @@
     height: 36px;
     width: 36px;
     border-radius: 50%;
-    border: 2px solid $white;
     margin: 7px;
-    color: $white;
+    color: #fff;
+    transition: all 0.4s ease;
+    background-color: transparent;
+    border: 2px solid #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     &:hover {
-      border-color: $accent;
       transform: scale(1.08);
-      svg {
-        fill: $accent;
-      }
     }
   }
 }
