--- a/src/app/scss/common/_general.scss
+++ b/src/app/scss/common/_general.scss
@@ -707,6 +707,32 @@ label {
   z-index: -1;
 }
 
+.cs-dynamic_bg {
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0.7) 50%, rgba(0,0,0,0.85) 100%);
+    z-index: 0;
+    animation: overlay-pulse 8s infinite alternate;
+  }
+}
+
+@keyframes overlay-pulse {
+  0% {
+    background: linear-gradient(135deg, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0.7) 50%, rgba(0,0,0,0.85) 100%);
+  }
+  50% {
+    background: linear-gradient(135deg, rgba(0,0,0,0.85) 0%, rgba(0,0,0,0.75) 50%, rgba(0,0,0,0.9) 100%);
+  }
+  100% {
+    background: linear-gradient(135deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.65) 50%, rgba(0,0,0,0.85) 100%);
+  }
+}
+
 .cs-parallax [class*='cs-to_'],
 .cs-parallax_bg [class*='cs-to_'] {
   transition: all 0.6s ease;
@@ -864,10 +890,31 @@ label {
   height: 320px;
   width: 320px;
   div {
-    background-color: #000;
+    background-color: #000000;
     transform: rotate(45deg);
     height: 100%;
     width: 100%;
+    border: 3px solid;
+    animation: rgb-neon-border 4s linear infinite;
+  }
+}
+
+@keyframes rgb-neon-border {
+  0%,
+  100% {
+    border-color: #ff00ff;
+    box-shadow: 0 0 5px #ff00ff, 0 0 10px #ff00ff, 0 0 20px #ff00ff,
+      0px 10px 20px rgba(0, 0, 0, 0.2), 0px 20px 40px rgba(0, 0, 0, 0.2);
+  }
+  33% {
+    border-color: #00ffff;
+    box-shadow: 0 0 5px #00ffff, 0 0 10px #00ffff, 0 0 20px #00ffff,
+      0px 10px 20px rgba(0, 0, 0, 0.2), 0px 20px 40px rgba(0, 0, 0, 0.2);
+  }
+  66% {
+    border-color: #ffff00;
+    box-shadow: 0 0 5px #ffff00, 0 0 10px #ffff00, 0 0 20px #ffff00,
+      0px 10px 20px rgba(0, 0, 0, 0.2), 0px 20px 40px rgba(0, 0, 0, 0.2);
   }
 }
 
@@ -892,8 +939,15 @@ label {
   position: relative;
   .cs-shape_4 {
     position: absolute;
-    background-color: #000;
     border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+      max-width: 80%;
+      max-height: 80%;
+      object-fit: contain;
+    }
     &:nth-child(1) {
       left: 5%;
       top: 42%;
@@ -1085,13 +1139,18 @@ label {
 
 .cs-google_map {
   height: 600px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  
   iframe {
     height: 100%;
     display: block;
     border: none;
     width: 100%;
-    filter: grayscale(100%) invert(90%) contrast(120%);
+    border-radius: 10px;
   }
+  
   &.cs-type1 {
     height: 100%;
     min-height: 300px;
@@ -1100,9 +1159,24 @@ label {
 }
 
 .cs-list.cs-style1 {
+  list-style: none;
+  padding: 0;
+  margin: 0;
   li {
+    position: relative;
+    padding-left: 25px;
     &:not(:last-child) {
-      margin-bottom: 20px;
+      margin-bottom: 10px;
+    }
+    &::before {
+      content: '';
+      height: 10px;
+      width: 10px;
+      border-radius: 50%;
+      background-color: $accent;
+      position: absolute;
+      left: 0;
+      top: 7px;
     }
   }
 }
@@ -1337,13 +1411,11 @@ label {
   }
 }
 
-@media screen and (max-width: 1540px) {
+@media screen and (max-width: 1550px) {
   .cs-case_study .cs-case_study_title {
     font-size: 100px;
     padding: 40px 120px;
   }
-}
-@media screen and (max-width: 1550px) {
   .cs-shape_wrap_2 .cs-shape_2 {
     right: -15%;
     top: 8%;
@@ -1665,9 +1737,13 @@ label {
   -webkit-backdrop-filter: blur(10px);
 }
 
-@media screen and (max-width: 1540px) {
-  .cs-case_study .cs-case_study_title {
-    font-size: 100px;
-    padding: 40px 120px;
+.cs-sidebar.cs-style1 {
+  background-color: $gray;
+  padding: 30px;
+  border-radius: 15px;
+}
+.cs-sidebar_widget {
+  &:not(:last-child) {
+    margin-bottom: 25px;
   }
 }
