--- a/src/app/scss/components/_cta.scss
+++ b/src/app/scss/components/_cta.scss
@@ -4,6 +4,18 @@
   padding: 90px 30px;
   border-radius: 15px;
   background-color: #161616;
+  position: relative;
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: inherit;
+    z-index: 1;
+  }
   .cs-cta_in {
     position: relative;
     z-index: 2;
