Enhance SEO, performance, and mobile responsiveness: Add sitemap, robots.txt, optimize Next.js config, improve mobile logo visibility

--- a/src/app/scss/common/_header.scss
+++ b/src/app/scss/common/_header.scss
@@ -11,6 +11,11 @@
 .cs-site-branding {
   display: inline-block;
   max-width: 180px;
+  img {
+    max-height: 45px;
+    width: auto;
+    transition: all 0.3s ease;
+  }
 }
 .cs-site_header {
   position: absolute;
@@ -302,13 +307,6 @@
 //   top: 0;
 //   opacity: 1;
 // }
-
-.cs-site-branding {
-  display: inline-block;
-  img {
-    max-height: 45px;
-  }
-}
 
 @media screen and (min-width: 1200px) {
   .cs-main_header {
@@ -737,23 +735,24 @@
 }
 @media screen and (max-width: 575px) {
   .cs-site-branding {
-    max-width: 150px;
+    max-width: 180px;
+    img {
+      max-height: 40px;
+    }
   }
 
   .cs-hamburger_wrap .cs-hamburger {
     margin-right: 0;
   }
-  .cs-site_branding img {
-    max-height: 32px;
-  }
-  .cs-site_header.cs-style1 .cs-btn {
-    span {
-      display: none;
+  .cs-site_header.cs-style1 {
+    .cs-main_header_in {
+      height: 70px;
     }
-    svg {
-      margin-right: 0;
-      width: 20px;
-      height: 20px;
+    
+    .cs-munu_toggle {
+      top: 50%;
+      margin-top: -13px;
+      right: 15px;
     }
   }
 }
