--- a/src/app/scss/common/_general.scss
+++ b/src/app/scss/common/_general.scss
@@ -1747,3 +1747,15 @@ label {
     margin-bottom: 25px;
   }
 }
+
+.cs-sr_only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
