--- a/src/app/scss/default/_typography.scss
+++ b/src/app/scss/default/_typography.scss
@@ -47,7 +47,8 @@ h6 {
 }
 
 h1 {
-  font-size: 56px;
+  font-size: 36px;
+  margin-top: 20px;
 }
 
 h2 {
@@ -70,7 +71,6 @@ h6 {
   font-size: 16px;
 }
 
-h1,
 .cs-fs-80 {
   font-size: 80px;
 }
