style: remove background from mobile menu toggle

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -17,4 +17,13 @@
       align-items: center;
     }
   }
+}
+
+.cs-menu_toggle {
+  background: transparent !important;
+}
+
+.cs-side_header,
+.cs-side_header_shape {
+  background-color: transparent !important;
 } 
