feat: updated styles for partner logos and service tags

--- a/src/app/ui/LogoList/logolist.scss
+++ b/src/app/ui/LogoList/logolist.scss
@@ -17,6 +17,13 @@
   }
 }
 
+.cs-partner_logo_name {
+  text-align: center;
+  margin-top: 10px;
+  font-size: 14px;
+  color: #a6a6a6;
+}
+
 .cs-partner_logo.black-logo {
   img {
     filter: invert(1);
