Fix video modal and styling

--- a/src/app/scss/common/_header.scss
+++ b/src/app/scss/common/_header.scss
@@ -90,40 +90,30 @@
         background-color: currentColor;
         color: inherit;
         vertical-align: top;
-        transition: 0s ease-in-out;
+        transition: 0.3s ease-in-out;
         border-radius: 3px;
         &:nth-child(1) {
-          transform: translate(0, -7px);
-          width: calc(100% - 4px);
+          transform: translateY(-7px);
         }
         &:nth-child(2) {
-          transform: translate(0, 0);
-          width: calc(100% - 4px);
+          transform: translateY(0);
         }
         &:nth-child(3) {
-          transform: translate(0, 7px);
-        }
-        &:nth-child(4) {
-          transform: translate(0, 14px);
+          transform: translateY(7px);
         }
       }
     }
     &:hover {
       .cs-icon_btn_in {
         span {
-          transition: 0.3s ease-in-out;
           &:nth-child(1) {
-            transform: translate(0, 0);
+            transform: translateY(-7px);
           }
           &:nth-child(2) {
-            transform: translate(0, 7px);
-            width: 100%;
+            transform: translateY(0);
           }
           &:nth-child(3) {
-            transform: translate(0, 14px);
-          }
-          &:nth-child(4) {
-            transform: translate(0, 21px);
+            transform: translateY(7px);
           }
         }
       }
@@ -790,15 +780,12 @@
     top: 0;
   }
   .cs-toolbox {
-    margin-right: 45px;
   }
   .cs-site_header.cs-style1 .cs-icon_btn {
     width: 38px;
     height: 38px;
   }
-  .cs-toolbox,
   .cs-side_header {
-    display: none;
   }
   .cs-site_header_full_width .container {
     max-width: 100%;
