--- a/src/app/scss/style.scss
+++ b/src/app/scss/style.scss
@@ -11,7 +11,7 @@
 @import 'components/section_heading';
 @import 'components/button';
 @import 'components/funfact';
-@import 'components/videomodal';
+@import 'common/video-modal';
 @import 'components/testimonial';
 @import 'components/portfolio';
 @import 'components/post';
