--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -23,6 +23,18 @@
   background: transparent !important;
 }
 
+.cs-icon_btn {
+  background-color: transparent !important;
+}
+
+.cs-icon_btn_in span {
+  background-color: white !important;
+}
+
+.cs-toolbox {
+  display: block !important;
+}
+
 .cs-side_header,
 .cs-side_header_shape {
   background-color: transparent !important;
